Bug 496185 - When using HDR, Pipewire screenshots/recordings are dim
Summary: When using HDR, Pipewire screenshots/recordings are dim
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: colour-management (other bugs)
Version First Reported In: 6.2.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-12 16:49 UTC by Oleg
Modified: 2024-11-19 22:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.4
Sentry Crash Report:


Attachments
Screenshot is dim (1.24 MB, video/webm)
2024-11-12 16:49 UTC, Oleg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg 2024-11-12 16:49:45 UTC
Created attachment 175768 [details]
Screenshot is dim

SUMMARY
When using HDR, screenshots/recordings made with Pipewire (Spectacle, gpu-screen-recorder, OBS) are much dimmer than what is actually on the screen. It's clearly visible on video I've attached and the said video is also dimmer.

STEPS TO REPRODUCE
1. Enable HDR
2. Open Spectacle
3. Make a screenshot

OBSERVED RESULT
Screenshots are much dimmer than the source content.

EXPECTED RESULT
Screenshots should have the same brightness with the screen content.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0
Kernel Version: 6.11.7-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-7700K CPU @ 4.20GHz
Memory: 15.6 ГиБ of RAM
Graphics Processor: AMD Radeon RX 6700 XT
Comment 1 Bug Janitor Service 2024-11-18 15:54:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6796
Comment 2 Zamundaaa 2024-11-19 13:54:55 UTC
Git commit d62eb36757a0e4aacc911e8bffc0ae9e16fcae3e by Xaver Hugl.
Committed on 19/11/2024 at 13:35.
Pushed by zamundaaa into branch 'master'.

plugins/screencast, screenshot: switch color transforms to relative colorimetric

This is to disable tone mapping, which makes screenshots of SDR things while HDR is enabled on a
display look a lot worse.
As the tradeoff, this will make HDR content look worse, but that can be fixed later by taking the
actual HDR metadata into account.

M  +1    -1    src/plugins/screencast/outputscreencastsource.cpp
M  +1    -1    src/plugins/screencast/regionscreencastsource.cpp
M  +1    -1    src/plugins/screenshot/screenshot.cpp

https://invent.kde.org/plasma/kwin/-/commit/d62eb36757a0e4aacc911e8bffc0ae9e16fcae3e
Comment 3 Zamundaaa 2024-11-19 14:57:57 UTC
Git commit 34cf899dedcd9fe8dbab16cf21c88a77f49d9949 by Xaver Hugl.
Committed on 19/11/2024 at 14:34.
Pushed by zamundaaa into branch 'Plasma/6.2'.

plugins/screencast, screenshot: switch color transforms to relative colorimetric

This is to disable tone mapping, which makes screenshots of SDR things while HDR is enabled on a
display look a lot worse.
As the tradeoff, this will make HDR content look worse, but that can be fixed later by taking the
actual HDR metadata into account.


(cherry picked from commit d62eb36757a0e4aacc911e8bffc0ae9e16fcae3e)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +1    -1    src/plugins/screencast/outputscreencastsource.cpp
M  +1    -1    src/plugins/screencast/regionscreencastsource.cpp
M  +1    -1    src/plugins/screenshot/screenshot.cpp

https://invent.kde.org/plasma/kwin/-/commit/34cf899dedcd9fe8dbab16cf21c88a77f49d9949