plugins/screencast, screenshot: switch color transforms to relative colorimetric

This is to disable tone mapping, which makes screenshots of SDR things while HDR is enabled on a
display look a lot worse.
As the tradeoff, this will make HDR content look worse, but that can be fixed later by taking the
actual HDR metadata into account.

BUG: 496185