src/plugins/screencast/outputscreencastsource.cpp
@@ -72,7 +72,7 @@ void OutputScreenCastSource::render(GLFramebuffer *target)
     projectionMatrix.scale(1, -1);
     projectionMatrix.ortho(QRect(QPoint(), textureSize()));
     shaderBinder.shader()->setUniform(GLShader::Mat4Uniform::ModelViewProjectionMatrix, projectionMatrix);
-    shaderBinder.shader()->setColorspaceUniforms(colorDescription, ColorDescription::sRGB, RenderingIntent::Perceptual);
+    shaderBinder.shader()->setColorspaceUniforms(colorDescription, ColorDescription::sRGB, RenderingIntent::RelativeColorimetricWithBPC);
 
     GLFramebuffer::pushFramebuffer(target);
     outputTexture->render(textureSize());
